// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
    , totalling 
    $2.35
     
  </h3>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <h3>
    Viewing 
    10
     
    expenses
    , totalling 
    $2,350.00
     
  </h3>
</div>
`;
